tests/ui/consts/const-eval/heap/make-global-twice.stderr
error[E0080]: attempting to call `const_make_global` twice on the same allocation ALLOC0
  --> $DIR/make-global-twice.rs:13:5
   |
LL |     intrinsics::const_make_global(ptr);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `Y` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
